--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "license": "BSD-3-Clause",
     "require": {
         "silverstripe/framework": "^5.0 || ^6.0",
-        "silverstripe/admin": "^2.0 || ^3.0"
+        "silverstripe/admin": "^2.0 || ^3.0",
+        "silverstripe/linkfield": "^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3",
