--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     "require": {
         "silverstripe/framework": "^5.0 || ^6.0",
         "silverstripe/admin": "^2.0 || ^3.0",
-        "silverstripe/linkfield": "^3.0 || ^4.0 || ^5.0"
+        "silverstripe/linkfield": "^3.0 || ^4.0 || ^5.0",
+        "unclecheese/display-logic": "^3.0 || ^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3",
