--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "silverstripe/framework": "^5.0 || ^6.0",
         "silverstripe/admin": "^2.0 || ^3.0",
         "silverstripe/linkfield": "^3.0 || ^4.0 || ^5.0",
-        "unclecheese/display-logic": "^3.0 || ^4.0"
+        "unclecheese/display-logic": "^3.0 || ^4.0",
+        "undefinedoffset/sortablegridfield": "^2.0 || ^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3",
@@ -21,8 +22,8 @@
     },
     "autoload": {
         "psr-4": {
-            "SilverStripeModule\\Skeleton\\": "src/",
-            "SilverStripeModule\\Skeleton\\Tests\\": "tests/php/"
+            "PlasticStudio\\SilverstripePopups\\": "src/",
+            "PlasticStudio\\SilverstripePopups\\Tests\\": "tests/php/"
         }
     },
     "extra": {
